2009-03-14  Marek Habersack  <mhabersack@novell.com>

	* mod_mono.c (ensure_dashboard_initialized): takes an argument
	which tells it whether it's called as part of the XXGLOBAL (auto
	app) server and, if yes, turns off the dashboard attachment
	critical error which in this case is a false alarm. Fixes bug
	#476289

2009-03-09  Marek Habersack  <mhabersack@novell.com>

	* autogen.sh: added support for detecting libtool on Mac, which
	has it renamed to glibtool in versions 10.5+. Fixes bug #478381

2009-03-08  Marek Habersack  <mhabersack@novell.com>

	* configure.in: added detection of glib
	* mod_mono.8.in: added documentation for the new MonoIOMAP
	directive.
	* mod_mono.c (send_entire_file): attempts to map file name using
	mono_portability_find_file which is able to find files with the
	same name but different case if MONO_IOMAP is in effect.
	Added a new directive, MonoIOMAP which takes two parameters - the
	alias and MONO_IOMAP-style value (all/case/drive). This directive
	switches MONO_IOMAP on for that alias within mod_mono as well as
	exports the MONO_IOMAP environment variable in the backend's
	environment.

	* mono-io-portability.c, mono-io-portability.h: added. Copied from
	mono runtime and modified for mod_mono purposes.

2009-02-16  Marek Habersack  <mhabersack@novell.com>

	* src/mod_mono.c (fork_mod_mono_server): unblock the signals Mono
	needs (SIGPWR, SIGXCPU, 33, 35) just before executing the
	backend. It appears that some versions of Apache block signals and
	Mono uses the above in the runtime and in the GC. As the result of
	those signals being blocked, the forked backend would lock up as
	soon as GC would start collecting. Thanks to Zoltan Varga for
	noticing that the signals are blocked. Fixes bug #472732
	(mono_execute_request): When a connection attempt fails, do not
	start the backend immediately but first check if another backend
	is restarting it. If yes, retry several times to connect to the