@@ -1,3 +1,8 @@
+2009-03-16  Marek Habersack  <mhabersack@novell.com>
+
+	* mod_mono.c (ensure_dashboard_initialized): do the XXGLOBAL
+	detection based on the passed alias. Better fix for #476289
+
 2009-03-14  Marek Habersack  <mhabersack@novell.com>
 
 	* mod_mono.c (ensure_dashboard_initialized): takes an argument
